--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "mongoose": "^5.5.2"
+    "mongoose": "^5.5.2",
+    "morgan": "^1.9.1",
+    "path": "^0.12.7"
   }
 }
