--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "cryptopapertrading-site",
+  "name": "mern",
   "version": "1.0.0",
+  "description": "Mern Demo",
   "main": "server.js",
-  "repository": "https://github.com/mdamian9/cryptopapertrading-site.git",
-  "author": "mdamian9 <m.damian9@hotmail.com>",
-  "license": "MIT",
+  "scripts": {
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && yarn install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.11.0"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "mongoose": "^5.5.2",
-    "morgan": "^1.9.1",
-    "path": "^0.12.7"
+    "express": "^4.15.4",
+    "if-env": "^1.0.4",
+    "morgan": "^1.9.1"
   }
 }
