--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Crypto Paper Trading",
+  "name": "Crypto Paper Trading",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "btc_logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
