--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
+    "mongoose": "^5.5.5",
     "morgan": "^1.9.1"
   }
 }
