--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.15.4",
     "if-env": "^1.0.4",
     "mongoose": "^5.5.5",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "twit": "^2.2.11"
   }
 }
