--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^8.0.0",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
     "mongoose": "^5.5.5",
