--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "dotenv": "^8.0.0",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.5",
     "morgan": "^1.9.1",
     "twit": "^2.2.11"
